fixed spacing on hero

--- a/shoSupply-client/src/app/components/slider/slider.component.css
+++ b/shoSupply-client/src/app/components/slider/slider.component.css
@@ -13,6 +13,7 @@
   }
   
   .label {
+    padding-left: 10px;
     font-weight: bold;
     margin-right: 2rem;
     white-space: nowrap;
