--- a/shoSupply-client/src/app/pages/home/home.component.css
+++ b/shoSupply-client/src/app/pages/home/home.component.css
@@ -7,6 +7,7 @@
   
   .heading {
     font-size: 2.5rem;
+    font-weight: bold;
     margin-bottom: 1rem;
     color: white;
   }
